[project]
name = "platform-lookup"
version = "0.1.0rc0"
description = "Web service that runs outside of VOLTTRON server and let VOLTTRON instance to register itself and lookup for services that can be part of a federated group"
authors = [
    {name = "volttron",email = "volttron@pnnl.gov"}
]
license = {text = "Apache-2.0"}
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.118.0"
uvicorn = ">=0.37.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
